# moss

./: .gitignore  README.md  pyproject.toml
moss/: agent.py  jupyter_env.py  memory.py
moss/tools/: output.py
moss/tools/code_interpreter/: base.py  jupyer.py  output.py  output_processor.py
user_defined_modules/: applescript.py  initiate_approval.py  novel.py  stock_data.py  web_browser.py
