[tool.poetry]
name = "moss-core"
version = "0.1.0"
description = "AI 智能体"
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "moss"}]
repository = "https://github.com/wangyuxinwhy/generate"

[tool.poetry.dependencies]
python = "^3.8"
generate-core = "^0.2.0"
nbclient = "^0.9.0"

[tool.ruff]
line-length = 128
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "N",
    "SIM",
    "ANN",
    "A",
    "T",
    "PT",
    "RET",
    "PL",
    "TRY",
    "PERF",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict
    "C901",  # too complex
    "A003",  # shadow builtin 
    "ANN1",  # self and cls
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in
    "PLR0913", # Too many arguments in function definition
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLC0414", # reimport
]
target-version = "py38"

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
reportMissingTypeStubs=false

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pyright = "^1.1.310"
ruff = "^0.1.4"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
